--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
                 <h1>Shohei Iwata - profile</h1>
             </div>
         
-
-
             <div class="header-right">
                 <nav>
                     <ul>
@@ -101,25 +99,33 @@
         <div class="skil  animate">
             <div class="type ">
                 <i class="bi bi-filetype-html"></i>
-                <p>HTML</p>
-                <p>html5を用いてホームページの基礎を作っていきます。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
-                </p>
+                <div class="space">
+                    <p>HTML</p>
+                    <p>html5を用いてホームページの基礎を作っていきます。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
+                    </p>
+                </div>
             </div>
             <div class="type animate delay">
                 <i class="bi bi-filetype-css"></i>
-                <p>CSS</p>
-                <p>レスポンシブ対応はもちろんの事見やすいサイト作りを意識しながら要望に沿ったサイトを作ります。</p>
+                <div class="space">
+                    <p>CSS</p>
+                    <p>レスポンシブ対応はもちろんの事見やすいサイト作りを意識しながら要望に沿ったサイトを作ります。</p>
+                </div>
             </div>
             <div class="type animate delay-more">
                 <i class="bi bi-filetype-js"></i>
-                <p>javaScript</p>
-                <p>JavaScriptを用いてページに動きを付けます。
-                モーダル、アコーディオン、フォーム、アニメーションを実装する事が出来ます。<br>JQueryも対応出来ます。</p>
+                <div class="space">
+                    <p>javaScript</p>
+                    <p>JavaScriptを用いてページに動きを付けます。
+                    モーダル、アコーディオン、フォーム、アニメーションを実装する事が出来ます。<br>JQueryも対応出来ます。</p>
+                </div>
             </div>
             <div class="type  animate delay-more-more">
                 <i class="bi bi-wordpress"></i>
-                <p>wordpress</p>
-                <p>現在勉強中です...<br>ブログの経験があり基本操作は理解しているので要相談になります。</p>
+                <div class="space">
+                    <p>wordpress</p>
+                    <p>現在勉強中です...<br>ブログの経験があり基本操作は理解しているので要相談になります。</p>
+                </div>
             </div>
         </div>
     </section>
