--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <i class="bi bi-wordpress"></i>
                 <div class="space">
                     <p>wordpress</p>
-                    <p>現在勉強中です...<br>ブログの経験があり基本操作は理解しているので要相談になります。</p>
+                    <p>現在勉強中です...<br>自作テーマのアップロード。phpに合わせたパスの変更など簡単な実装は出来ますので要相談になります。</p>
                 </div>
             </div>
 
