--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <i class="bi bi-wordpress"></i>
                 <div class="space">
                     <p>wordpress</p>
-                    <p>現在勉強中です...<br>自作テーマのアップロード。phpに合わせたパスの変更など簡単な実装は出来ますので要相談になります。</p>
+                    <p>現在勉強中です...<br>自作テーマのアップ。phpに合わせたパスの変更など簡単な事は出来ますので要相談になります。</p>
                 </div>
             </div>
 
@@ -152,46 +152,60 @@
 
             <div class="portfolio ">
                 <div class="portfolio-mask animate">
+                    <a href="works/practice8/index.html">
                     <img src="img/practice1.jpeg" alt="">
                     <div class="mask">
                         <div class="caption">自作サイト</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask animate">
+                    <a href="works/practice5/index.html">
                     <img src="img/practice2.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">自作サイト</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask  animate">
+                    <a href="works/practice4/index.html">
                     <img src="img/practice3.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">模写コーディング</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask  animate">
+                    <a href="works/practice3/index.html">
                     <img src="img/practice4.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">模写コーディング</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask animate  ">
+                    <a href="works/practice2/index.html">
                     <img src="img/practice5.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">模写コーディング</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask  animate">
+                    <a href="works/practice1/index.html">
                     <img src="img/practice6.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">模写コーディング</div>
                     </div>
+                    </a>
                 </div>
                 <div class="portfolio-mask animate">
+                    <a href="works/practice6/index.html">
                     <img src="img/practice7.jpeg" alt="" />
                     <div class="mask">
                         <div class="caption">自作サイト</div>
                     </div>
+                    </a>
                 </div>
                 
                 <div class="portfolio-mask">
