--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
 
             <div class="header-img">
-                <img src="img/soumaya-museum-g7b2a3ec9c_1920.jpg" alt="">
+                <video src="img/5659_1280x720.mp4" loop autoplay muted></video>
                 <div class="header-text">
                     <p class="show">ようこそ</p>
                     <p>SHOHEIのポートフォリオへ</p>
@@ -108,7 +108,7 @@
         
         <div class="skil  animate">
             <div class="type ">
-                <i class="bi bi-filetype-html"></i>
+                <img src="img/—Pngtree—html file document icon_4174779.png" alt="html">
                 <div class="space">
                     <p>HTML</p>
                     <p>html5を用いてホームページの基礎を作っていきます。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="type animate delay">
-                <i class="bi bi-filetype-css"></i>
+                <img src="img/—Pngtree—css file document icon_4233832.png" alt="css">
                 <div class="space">
                     <p>CSS</p>
                     <p>レスポンシブ対応はもちろんの事見やすいサイト作りを意識しながら要望に沿ったサイトを作ります。</p>
