--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="type animate delay-more">
-                <i class="bi bi-filetype-js"></i>
+                <img src="img/icons8-javascript-96.png" alt="javascript">
                 <div class="space">
                     <p>javaScript</p>
                     <p>JavaScriptを用いてページに動きを付けます。
@@ -131,10 +131,10 @@
                 </div>
             </div>
             <div class="type  animate delay-more-more" id="forth">
-                <i class="bi bi-wordpress"></i>
+                <img src="img/icons8-ワードプレス-96.png" alt="wordpress">
                 <div class="space">
                     <p>wordpress</p>
-                    <p>現在勉強中です...<br>自作テーマのアップ。phpに合わせたパスの変更など簡単な事は出来ますので要相談になります。</p>
+                    <p>自作テーマからお問い合わせフォームなどお任せください。管理画面から編集しやすいwordpress作りをします。</p>
                 </div>
             </div>
 
@@ -151,76 +151,52 @@
             </div>
 
             <div class="portfolio ">
-                <div class="portfolio-mask animate">
+                <div class="portfolio-mask animate ">
                     <a href="works/practice8/index.html">
-                    <img src="img/practice1.jpeg" alt="">
-                    <div class="mask">
-                        <div class="caption">自作サイト</div>
-                    </div>
+                    <img src="img/1.png" alt="">
                     </a>
                 </div>
                 <div class="portfolio-mask animate">
                     <a href="works/practice5/index.html">
-                    <img src="img/practice2.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">自作サイト</div>
-                    </div>
+                    <img src="img/2.png" alt="">
                     </a>
                 </div>
-                <div class="portfolio-mask  animate">
+                <div class="portfolio-mask animate">
                     <a href="works/practice4/index.html">
-                    <img src="img/practice3.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">模写コーディング</div>
-                    </div>
+                    <img src="img/3.png" alt="">
                     </a>
                 </div>
-                <div class="portfolio-mask  animate">
+                <div class="portfolio-mask animate">
                     <a href="works/practice3/index.html">
-                    <img src="img/practice4.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">模写コーディング</div>
-                    </div>
+                    <img src="img/4.png" alt="">
                     </a>
                 </div>
-                <div class="portfolio-mask animate  ">
-                    <a href="works/practice2/index.html">
-                    <img src="img/practice5.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">模写コーディング</div>
-                    </div>
-                    </a>
-                </div>
-                <div class="portfolio-mask  animate">
+                <div class="portfolio-mask animate">
                     <a href="works/practice1/index.html">
-                    <img src="img/practice6.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">模写コーディング</div>
-                    </div>
+                    <img src="img/5.png" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-mask animate">
+                    <a href="works/practice2/index.html">
+                    <img src="img/6.png" alt="">
                     </a>
                 </div>
                 <div class="portfolio-mask animate">
                     <a href="works/practice6/index.html">
-                    <img src="img/practice7.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">自作サイト</div>
-                    </div>
+                    <img src="img/7.png" alt="">
                     </a>
                 </div>
-                
-                <div class="portfolio-mask">
-                    <!-- <img src="img/practice7.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">自作サイト</div>
-                    </div> -->
+                <div class="portfolio-mask animate">
+                    <a href="works/practice7/index.html">
+                    <img src="img/8.png" alt="">
+                    </a>
+                </div>
+                <div class="portfolio-mask animate">
+                    <!-- <a href="">
+                    <img src="img/8.png" alt="">
+                    </a> -->
                 </div>
                 
-                <div class="portfolio-mask">
-                    <!-- <img src="img/practice7.jpeg" alt="" />
-                    <div class="mask">
-                        <div class="caption">自作サイト</div>
-                    </div> -->
-                </div>
             </div>
         </section>
 
