--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
             
 
-            <div class="header-img">
-                <video src="img/5659_1280x720.mp4" loop autoplay muted></video>
+            <div class="header-img" >
+                <video src="img/5659_1280x720.mp4" playsinline loop autoplay muted></video>
                 <div class="header-text">
                     <p class="show">ようこそ</p>
                     <p>SHOHEIのポートフォリオへ</p>
@@ -201,6 +201,9 @@
         </section>
 
         </main>
+
+        <div class="bcolor"></div>
+
         <footer>
             ©Shohei Iwata
             <a href="#" id="to_top">
