--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <dt>職業：</dt>
                         <dd>大学生、web制作</dd>
                         <dt>一言 :</dt>
-                        <dd><p id="strong">現在夏休み特訓中です。!!!</p>スキルは少ないですが熱意と時間はあるので任された案件は最速で最高品質の物を作ります。<br>＊実績集めのため格安で受けさせて頂きます。</dd>
+                        <dd><p id="strong">現在駆け出し特訓中です。!!!</p>スキルは少ないですが熱意と時間はあるので任された案件は最速で最高品質の物を作ります。<br>＊実績集めのため格安で受けさせて頂きます。</dd>
                     </dl>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                 <img src="img/—Pngtree—html file document icon_4174779.png" alt="html">
                 <div class="space">
                     <p>HTML</p>
-                    <p>html5を用いてホームページの基礎を作っていきます。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
+                    <p class="textalign">html5を用いてホームページの基礎を作っていきます。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
                     </p>
                 </div>
             </div>
@@ -119,22 +119,22 @@
                 <img src="img/—Pngtree—css file document icon_4233832.png" alt="css">
                 <div class="space">
                     <p>CSS</p>
-                    <p>レスポンシブ対応はもちろんの事見やすいサイト作りを意識しながら要望に沿ったサイトを作ります。</p>
+                    <p class="textalign">レスポンシブ対応はもちろんの事見やすいサイト作りを意識しながら要望に沿ったサイトを作ります。</p>
                 </div>
             </div>
             <div class="type animate delay-more">
                 <img src="img/icons8-javascript-96.png" alt="javascript">
                 <div class="space">
                     <p>javaScript</p>
-                    <p>JavaScriptを用いてページに動きを付けます。
-                    モーダル、アコーディオン、フォーム、アニメーションを実装する事が出来ます。<br>JQueryも対応出来ます。</p>
+                    <p class="textalign">JavaScriptを用いてページに動きを付けます。
+                    モーダル、アコーディオン、フォーム、アニメーションを実装する事が出来ます。JQueryも対応可能です。</p>
                 </div>
             </div>
             <div class="type  animate delay-more-more" id="forth">
                 <img src="img/icons8-ワードプレス-96.png" alt="wordpress">
                 <div class="space">
                     <p>wordpress</p>
-                    <p>自作テーマからお問い合わせフォームなどお任せください。管理画面から編集しやすいwordpress作りをします。</p>
+                    <p class="textalign">自作テーマからお問い合わせフォームなどお任せください。管理画面から編集しやすいwordpress作りをします。</p>
                 </div>
             </div>
 
@@ -151,11 +151,11 @@
             </div>
 
             <div class="portfolio ">
-                <div class="portfolio-mask animate ">
-                    <a href="works/practice8/index.html">
-                    <img src="img/1.png" alt="">
-                    </a>
-                </div>
+                    <div class="portfolio-mask animate ">
+                        <span><a href="works/practice8/index.html">
+                        <img src="img/1.png" alt="">
+                        </a></span>
+                    </div>
                 <div class="portfolio-mask animate">
                     <a href="works/practice5/index.html">
                     <img src="img/2.png" alt="">
