--- a/works_design1.html
+++ b/works_design1.html
@@ -27,10 +27,7 @@
                 <div class="header-right">
                     <nav>
                         <ul>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#service">Service</a></li>
-                            <li><a href="#skils">Skils</a></li>
-                            <li><a href="#works">Works</a></li>
+                            <li><a href="/index.html">TOP</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -47,20 +44,18 @@
         <section>
             <div class="works_desc_text">
                 <div class="works_desc_text_left">
-                    <h3>トレース</h3>
-                    <p>イメージ:企業LP</p>
+                    <h3>架空自作サイト</h3>
+                    <p>イメージ:ジュエリー、可愛く、ピンク</p>
                     <p>制作:Figma</p>
-                    <p>制作日:2022年10月30日</p>
-                    <p>URL:<a href="https://ppc-master.jp/">https://ppc-master.jp/</a></p>
+                    <p>制作日:2022年11月1日</p>
                 </div>
                 <div class="works_desc_text_right">
-                    <img src="img/ppc-master.jp_1.png" alt="制作画像ミニ１">
-                    <img src="img/ppc-master.jp_2.png" alt="制作画像ミニ１">
-                    <img src="img/ppc-master.jp_3.png" alt="制作画像ミニ１">
-                    <img src="img/ppc-master.jp_4.png" alt="制作画像ミニ１">
+                    <img src="img/架空サイト１_1.png" alt="制作画像ミニ１">
+                    <img src="img/架空サイト１_2.png" alt="制作画像ミニ１">
+                    <img src="img/架空サイト１_3.png" alt="制作画像ミニ１">
                 </div>
             </div>
-            <img src="img/ppc-master.jp_.png" alt="制作物画像">
+            <img src="img/架空サイト１.png" alt="制作物画像">
         </section>
     </main>
     
