--- a/works.html
+++ b/works.html
@@ -48,7 +48,7 @@
                 <div class="works_design_section">
                     <section class="works_design_portfolio works_portfolio">
                         <a href="works_design1.html">
-                        <img src="img/Group 26.png" alt="portfolio">
+                        <img src="img/New Product Mockup Now Available Marketing Promotion Instagram Post (1).png" alt="portfolio">
                         <P>架空自作サイト</P>
                         <p>イメージ：ジュエリー、可愛く、ピンク</p>
                         <p>制作日:2022年11月1日</p>
@@ -56,7 +56,7 @@
                     </section>
                     <section class="works_design_portfolio works_portfolio">
                         <a href="works_design2.html">
-                        <img src="img/Group 48.jpg" alt="portfolio">
+                        <img src="img/New Product Mockup Now Available Marketing Promotion Instagram Post.png" alt="portfolio">
                         <P>トレース</P>
                         <p>イメージ:企業LP</p>
                         <p>制作日:2022年10月30日</p>
