--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
                             
                             <div class="portfolio ">
                                 <div class="portfolio-mask animate">
+                                    <a href="works_anken1.html">
+                                        <img src="img/9.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="portfolio-mask animate">
                                     <a href="works_design2.html">
                                         <img src="img/New Product Mockup Now Available Marketing Promotion Instagram Post (1).png" alt="">
                                     </a>
@@ -213,11 +218,7 @@
                                         <img src="img/8.png" alt="">
                                     </a>
                                 </div>
-                                <div class="portfolio-mask animate">
-                                    <!-- <a href="">
-                                        <img src="img/Group 48.jpg" alt="">
-                                    </a> -->
-                                </div>
+                                
                                 <div class="portfolio-mask animate">
                                     <!-- <a href="">
                                         <img src="img/Group 48.jpg" alt="">
