--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
                 <h3 class="works_h3">デザイン</h3>
                 <div class="works_design_section">
                     <section class="works_design_portfolio works_portfolio">
-                        <a href="works_design1.html">
+                        <a href="works_design2.html">
                         <img src="img/New Product Mockup Now Available Marketing Promotion Instagram Post (1).png" alt="portfolio">
                         <P>架空自作サイト</P>
                         <p>イメージ：ジュエリー、可愛く、ピンク</p>
@@ -55,7 +55,7 @@
                         </a>
                     </section>
                     <section class="works_design_portfolio works_portfolio">
-                        <a href="works_design2.html">
+                        <a href="works_design1.html">
                         <img src="img/New Product Mockup Now Available Marketing Promotion Instagram Post.png" alt="portfolio">
                         <P>トレース</P>
                         <p>イメージ:企業LP</p>
@@ -70,6 +70,13 @@
                 <h3 class="works_h3">コーディング</h3>
                 <div class="works_coding_section">
     
+                    <section class="works_coding_portfolio works_portfolio">
+                        <a href="works_anken1.html">
+                        <img src="img/9.png" alt="portfolio">
+                        <P>ココナラ　案件</P>
+                        </a>
+                    </section>
+
                     <section class="works_coding_portfolio works_portfolio">
                         <a href="works/practice8/index.html">
                         <img src="img/1.png" alt="portfolio">
