--- a/works_design2.html
+++ b/works_design2.html
@@ -27,10 +27,7 @@
                 <div class="header-right">
                     <nav>
                         <ul>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#service">Service</a></li>
-                            <li><a href="#skils">Skils</a></li>
-                            <li><a href="#works">Works</a></li>
+                            <li><a href="/works.html">一覧に戻る</a></li>
                         </ul>
                     </nav>
                 </div>
