--- a/works_design2.html
+++ b/works_design2.html
@@ -27,7 +27,7 @@
                 <div class="header-right">
                     <nav>
                         <ul>
-                            <li><a href="/works.html">一覧に戻る</a></li>
+                            <li><a href="works.html">一覧に戻る</a></li>
                         </ul>
                     </nav>
                 </div>
