--- a/works.html
+++ b/works.html
@@ -27,7 +27,7 @@
                 <div class="header-right">
                     <nav>
                         <ul>
-                            <li><a href="/index.html">TOP</a></li>
+                            <li><a href="index.html">TOP</a></li>
                         </ul>
                     </nav>
                 </div>
