--- a/works/practice6/index.html
+++ b/works/practice6/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <div class="back-home">
-        <a href="../../index.html"><i class="bi bi-backspace-fill"></i>ホームに戻る</a>
+        <a href="../../works.html" ><i class="bi bi-backspace-fill"></i>一覧に戻る</a>
     </div>
 
     <div class="mission">
