--- a/works/practice8/index.html
+++ b/works/practice8/index.html
@@ -16,10 +16,10 @@
 <body>
     <header><a href="index.html">WAVE</a></header>
 
-    
     <div class="back-home">
-        <a href="../../index.html"><i class="bi bi-backspace-fill"></i>ホームに戻る</a>
+        <a href="../../works.html" ><i class="bi bi-backspace-fill"></i>一覧に戻る</a>
     </div>
+
 
     <nav>
         <ul>
