--- a/works/practice5/index.html
+++ b/works/practice5/index.html
@@ -15,7 +15,7 @@
     <header>company</header>
 
     <div class="back-home">
-        <a href="../../index.html"><i class="bi bi-backspace-fill"></i>ホームに戻る</a>
+        <a href="../../works.html" ><i class="bi bi-backspace-fill"></i>一覧に戻る</a>
     </div>
 
     <nav>
