--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="target"></div>
         <div class="background">
             
-            <div class="header-top" id="topbtn bgwhite">
+            <div class="header-top " id="topbtn bgwhite ht">
                 <div class="header-left">
                     <a href="index.html">
                     <h1>Shohei Iwata - profile</h1>
@@ -30,6 +30,7 @@
                             <li><a href="#service">Service</a></li>
                             <li><a href="#skils">Skils</a></li>
                             <li><a href="#works">Works</a></li>
+                            <li><a href="https://shoheigit.github.io/fee/">料金</a></li>
                         </ul>
                     </nav>
                 </div>
