--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Shohei's portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.scss">
     
 </head>
 
@@ -163,7 +164,7 @@
                             
                             <div class="portfolio ">
                                 <div class="portfolio-mask animate">
-                                    <a href="/works_detail/works_anken1.html">
+                                    <a href="works_detail/works_anken1.html">
                                         <img src="img/GBAモックアップ画像.png" alt="モックアップ画像">
                                     </a>
                                 </div>
