--- a/works_detail/works_anken1.html
+++ b/works_detail/works_anken1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shohei's portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/works.css">
-    <link rel="stylesheet" href="/style1.css">
+    <link rel="stylesheet" href="../works.css">
+    <link rel="stylesheet" href="../style1.css">
     
 </head>
 
@@ -18,7 +18,7 @@
             
             <div class="header-top" id="topbtn">
                 <div class="header-left">
-                    <a href="/index.html">
+                    <a href="../index.html">
                     <h1>Shohei Iwata - profile</h1>
                     </a>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="header-right">
                     <nav>
                         <ul>
-                            <li><a href="/index.html">TOPに戻る</a></li>
+                            <li><a href="../index.html">TOPに戻る</a></li>
                         </ul>
                     </nav>
                 </div>
