--- a/works_detail/works_anken11.html
+++ b/works_detail/works_anken11.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/img/3.png" alt="モックアップ画像">
+            <img src="../img/3.png" alt="モックアップ画像">
         </section>
     </main>
     
