--- a/works_detail/works_anken2.html
+++ b/works_detail/works_anken2.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/img/sullelモックアップ画像.png" alt="制作物画像">
+            <img src="../img/sullelモックアップ画像.png" alt="制作物画像">
         </section>
     </main>
     
