--- a/works_detail/works_anken3.html
+++ b/works_detail/works_anken3.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/img/otoriclosing.png" alt="モックアップ画像">
+            <img src="../img/otoriclosing.png" alt="モックアップ画像">
         </section>
     </main>
     
