--- a/works_detail/works_anken4.html
+++ b/works_detail/works_anken4.html
@@ -55,7 +55,7 @@
                     <img src="/img/架空サイト１_3.png" alt="制作画像ミニ１">
                 </div>
             </div>
-            <img src="/img/架空サイト１.png" alt="制作物画像">
+            <img src="../img/架空サイト１.png" alt="制作物画像">
         </section>
     </main>
     
