--- a/works_detail/works_anken5.html
+++ b/works_detail/works_anken5.html
@@ -51,13 +51,13 @@
                     <p>URL:<a href="https://ppc-master.jp/">https://ppc-master.jp/</a></p>
                 </div>
                 <div class="works_desc_text_right">
-                    <img src="/img/ppc-master.jp_1.png" alt="制作画像ミニ１">
-                    <img src="/img/ppc-master.jp_2.png" alt="制作画像ミニ１">
-                    <img src="/img/ppc-master.jp_3.png" alt="制作画像ミニ１">
-                    <img src="/img/ppc-master.jp_4.png" alt="制作画像ミニ１">
+                    <img src="../img/ppc-master.jp_1.png" alt="制作画像ミニ１">
+                    <img src="../img/ppc-master.jp_2.png" alt="制作画像ミニ１">
+                    <img src="../img/ppc-master.jp_3.png" alt="制作画像ミニ１">
+                    <img src="../img/ppc-master.jp_4.png" alt="制作画像ミニ１">
                 </div>
             </div>
-            <img src="/img/ppc-master.jp_.png" alt="制作物画像">
+            <img src="../img/ppc-master.jp_.png" alt="制作物画像">
         </section>
     </main>
     
