--- a/works_detail/works_anken6.html
+++ b/works_detail/works_anken6.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/img/8.png" alt="モックアップ画像">
+            <img src="../img/8.png" alt="モックアップ画像">
         </section>
     </main>
     
