--- a/works_detail/works_anken1.html
+++ b/works_detail/works_anken1.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <img src="/img/GBAモックアップ画像.png" alt="">
+            <img src="../img/GBAモックアップ画像.png" alt="">
         </section>
     </main>
     
