--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
 
-                <div class="type  animate delay-more-more" id="forth">
+                <div class="type  animate delay-more-more">
                     <img src="img/icons8-ワードプレス-96.png" alt="wordpress">
                     <div class="space">
                         <p>wordpress</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
 
-                <div class="type  animate delay-more-more" id="forth">
+                <div class="type  animate delay-more-more"> <!--id="forth"-->
                     <img src="img/icons8-figma-96.png" alt="figama">
                     <div class="space">
                         <p>Figma</p>
@@ -300,7 +300,5 @@
         </footer>
         
         <script src="js/main.js"></script>
-    </body>
+</body>
 </html>
-   
-
