--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <p>スキル</p>
             </div>
             
-            <div class="skil  animate">
-                <div class="type ">
+            <div class="skil">
+                <div class="type  animate">
                     <img src="img/html_img.png" alt="html">
                     <div class="space">
                         <p>HTML</p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
 
-                <div class="type animate delay">
+                <div class="type animate delay-more">
                     <img src="img/icons8-sass-avatar-100.png" alt="scss">
                     <div class="space">
                         <p>SCSS</p>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
 
-                <div class="type animate delay-more">
+                <div class="type animate">
                     <img src="img/icons8-javascript-96.png" alt="javascript">
                     <div class="space">
                         <p>javaScript</p>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="type animate delay-more">
+                <div class="type animate delay">
                     <img src="img/icons8-php-ロゴ-96.png" alt="php">
                     <div class="space">
                         <p>PHP</p>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
 
-                <div class="type  animate delay-more-more">
+                <div class="type  animate delay-more">
                     <img src="img/icons8-ワードプレス-96.png" alt="wordpress">
                     <div class="space">
                         <p>wordpress</p>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
 
-                <div class="type  animate delay-more-more"> <!--id="forth"-->
+                <div class="type  animate"> <!--id="forth"-->
                     <img src="img/icons8-figma-96.png" alt="figama">
                     <div class="space">
                         <p>Figma</p>
