--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-top white" id="bgwhite">
                 <div class="header-left">
                     <a href="index.html">
-                    <h1>Shohei Iwata - profile</h1>
+                    <h1>Shohei - profile</h1>
                     </a>
                 </div>
             
@@ -49,8 +49,8 @@
                 </div>
                 <div class="header-text-under fadein">
                     <p>見て頂きありがとうございます。</p>
-                    <p>イワタショウヘイと申します。</p>
-                    <p>お客様の期待に応えるべく<br>誠心誠意努める事を誓います。</p>
+                    <p>ショウヘイと申します。</p>
+                    <p>新卒未経験エンジニアとしてweb系会社で働いています</p>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
                 
                 <div class="about-main">
                     <div class="about-img animate">
-                        <img src="img/IMG_4348.jpg" alt="">
+                        <img src="img/my.jpeg" alt="shohei">
                     </div>
 
                     <div class="about-text  animate">
@@ -75,13 +75,13 @@
                         <p>自己紹介</p>
                         <dl>
                             <dt>名前 :</dt>
-                            <dd>岩田　匠平</dd>
+                            <dd>shohei</dd>
                             <dt>年齢：</dt>
-                            <dd>21歳</dd>
+                            <dd>22歳</dd>
                             <dt>職業：</dt>
-                            <dd>大学生、web制作</dd>
+                            <dd>バックエンドエンジニア</dd>
                             <dt>一言 :</dt>
-                            <dd><p id="strong">即返事・即対応の圧倒的スピード感を持って取り組みます。ご依頼は絶対に断らない事を軸に活動してまいります。</dd>
+                            <dd><p id="strong">未経験なので日々奮闘しています！</dd>
                         </dl>
                     </div>
                 </div>
